# casper-clarity

./: .dockerignore  .drone.yml  .gitignore  DEV.md  DOCKER.md  Dockerfile  Dockerfile.node-proxy  Makefile  Pipfile  README.md  SYNC_FROM_CASPERLABS.md  USAGE.md  cypress-notes.txt  cypress.json  docker-buildenv.sh  install-sdk-grpc.sh  package-lock.json  package.json  pull_request_template.md  run-dev.sh
ci/: Jenkinsfile_api  Jenkinsfile_handler  Jenkinsfile_proxy
cypress/integration/: basics.spec.js
cypress/plugins/: index.js
cypress/support/: commands.js
docker_nginx/configs/: nginx.conf
docker_nginx/templates/: node-proxy.conf.template
grpc/: README.md  package-lock.json  package.json
grpcwebproxy/: Dockerfile
manual-test/: README.md  build_casperlabs.sh  run_manual_tests.sh  standup.sh  teardown.sh
manual-test/tests/: common.py  conftest.py  test_clarity_create_account.py
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/services/: CasperService.ts
sdk/test/lib/: Contracts.test.ts
server/: .env  .gitignore  README.md  package-lock.json  package.json  tslint.json
server/src/: config.json  server.ts
server/src/lib/: Contracts.ts
smart-contract/: Cargo.toml  Makefile
smart-contract/faucet/: Cargo.toml
smart-contract/faucet-stored/: Cargo.toml
ui/: package-lock.json  package.json  tsconfig.json
ui/public/: index.html
ui/src/components/: AccountSelector.tsx  App.tsx  BlockDAG.tsx  Faucet.tsx  ToggleButton.tsx
ui/src/containers/: AuthContainer.ts  ConnectedPeersContainer.ts
ui/src/services/: AuthService.ts
