[package]
name = "faucet-stored"
version = "0.1.0"
authors = ["Mateusz Górski <mateusz@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "faucet_stored"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
std = ["casper-contract/std", "casper-types/std"]

[dependencies]
casper-contract = "0.7.0"
casper-types = "0.7.0"
faucet = { path = "../faucet" }
